<resources>
    <string name="app_name">SmashBug</string>
    <string name="action_settings">Settings</string>

    <string name="smash_bug">Smash Bug</string>
    <string name="about">About</string>
    <string name="powered_by">Powered by Damla Çim</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="about_app_title">Smash Bug About</string>
    <string name="about_title">Smash Bug" is a fun and addictive bug puzzle game that challenges your skills and reflexes. The game is developed by Damla Çim, a computer engineering student who created it as a project for the "Android Java Development" course.</string>
</resources>